added new words and .gif

--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html>
 <head>
 	<title>My hypertext story</title>
+	<meta charset="utf-8">
 </head>
 <body>
+<center>
+
+	<h1> Hello there! 
+	<p><img src="image/fortune.giphy.gif">
+		<p><h3> I am sensing a strong aura around you.
+		<p>Choose a color and I'll let you in on the secret to life.</p></h3>
+		<br>
+		<br>
+		<h1><a href="blue.html">Blue</a></h1> 
+		<h3>or</h3>
+	<h1><a href="purple.html"> Purple</a></h1>
+</p>
+
 
 </body>
 </html>
