--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<title>My hypertext story</title>
 	<meta charset="utf-8">
 </head>
-<body>
+<!-- <body style="background-color: powderBlue;"> -->
+	<!-- <body style='background-image:url(https://media3.giphy.com/media/3o7Zeq69BEcmRaEn1C/giphy.gif?cid=790b76115d43514b3262446f49df61b1&rid=giphy.gif);'> -->
 <center>
 
 	<h1> Hello there! 
