changed background image again to no repeat.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 </head>
 <!-- <body style="background-color: powderBlue;"> -->
-	<!-- <body style='background-image:url(https://media3.giphy.com/media/3o7Zeq69BEcmRaEn1C/giphy.gif?cid=790b76115d43514b3262446f49df61b1&rid=giphy.gif);'> -->
+	<body style='background-image:url(https://media2.giphy.com/media/3o7Zeq69BEcmRaEn1C/giphy.gif?cid=790b76115d43572043556158366e38e2&rid=giphy.gif); background-size: cover; background-repeat: no-repeat;'>
 <center>
 
 	<h1> Hello there! 
