added more for other pages

--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
 <!-- <body style="background-color: powderBlue;"> -->
 	<body style='background-image:url(https://media2.giphy.com/media/3o7Zeq69BEcmRaEn1C/giphy.gif?cid=790b76115d43572043556158366e38e2&rid=giphy.gif); background-size: cover; background-repeat: no-repeat;'>
 <center>
-
-	<h1> Hello there! 
-	<p><img src="image/fortune.giphy.gif">
-		<p><h3> I am sensing a strong aura around you.
-		<p>Choose a color and I'll let you in on the secret to life.</p></h3>
-		<br>
-		<br>
-		<h1><a href="blue.html">Blue</a></h1> 
-		<h3>or</h3>
-	<h1><a href="purple.html"> Purple</a></h1>
-</p>
-
+	<br>
+	<h1><i><mark>&nbsp Hello there! &nbsp </mark></i>
+	<br>
+	<br>
+	<img src="image/fortune.giphy.gif" style='width: 460px; height:345px;'>
+	<br>
+	<h3><mark>&nbsp I am sensing a strong aura around you. &nbsp </mark>
+	<br>
+	<br>
+	<mark>&nbsp Choose a color and I'll let you in on the secret to life. &nbsp </h3></mark>
+	<h1><i><mark>&nbsp <a href="blue.html">BLUE</a> or <a href="purple.html"> PURPLE </a> &nbsp </h1></mark></i>
 
 </body>
 </html>
