--- a/purple.html
+++ b/purple.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Blue</title>
+	<title>Purple</title>
 	<meta charset="utf-8">
 </head>
 <body>
-<h3> Choose a word.
-<p>
-<a href="money.html">Money </a> or
-<a href="fulfilling.html">Fulfilling </a>
+<center>
+<h1>Now choose the word 
+<br>that speaks to you. 
+<br>
+<br>
+<br>
+<p style ="text-align:left;"><button type="button"><a href="money.html"><h1>Money</a></button></h1>
+<br>
+<br>
+<img src="https://media3.giphy.com/media/YrkwgXE19LfNNh3AYf/giphy.gif?cid=790b76115d446e816a67713655899cab&rid=giphy.gif" style='width: 100px; height:100px;'>
+<br>
+<br>
+<p style ="text-align:right;"><button type="button"><a href="fulfilling.html"><h1>Fulfilling</a></button></h1>
+<!-- <a href="money.html">Money</a> or
+<a href="fulfilling.html">Fulfilling </a> -->
 
 </body>
 </html>
