--- a/blue.html
+++ b/blue.html
@@ -3,12 +3,23 @@
 <head>
 	<title>Blue</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	
 </head>
 <body>
-	<center>
-<h3> Choose a word.
-	<p><a href="happiness.html">Happiness </a> or
-<a href="growing.html">Growing </a>
-</center>
+	<h1>Now choose the picture
+	<br>that you relate to. 
+	<br>
+	<br>
+	<br>
+	<a href="happiness.html"><i class="far fa-laugh-beam"></i></a>
+	<br>
+	<br>
+	<br>
+	<br>
+	<a href="growing.html"><img src="image/seedling.png" style='width: 100px; height:100px;'></a>
+
+<!-- <p><a href="happiness.html">Happiness </a> or
+<a href="growing.html">Growing </a> -->
 </body>
 </html>
