--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My hypertext story</title>
-	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	
+		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- 
+
+	<script defer src="./script.js"></script> -->
+
+
+	<title>Rosa's hypertext story</title>
 </head>
-<!-- <body style="background-color: powderBlue;"> -->
-	<body style='background-image:url(https://media2.giphy.com/media/3o7Zeq69BEcmRaEn1C/giphy.gif?cid=790b76115d43572043556158366e38e2&rid=giphy.gif); background-size: cover; background-repeat: no-repeat;'>
-<center>
-	<br>
-	<h1><i><mark>&nbsp Hello there! &nbsp </mark></i>
-	<br>
-	<br>
-	<img src="image/fortune.giphy.gif" style='width: 460px; height:345px;'>
-	<br>
-	<h3><mark>&nbsp I am sensing a strong aura around you. &nbsp </mark>
-	<br>
-	<br>
-	<mark>&nbsp Choose a color and I'll let you in on the secret to life. &nbsp </h3></mark>
-	<h1><i><mark>&nbsp <a href="blue.html">BLUE</a> or <a href="purple.html"> PURPLE </a> &nbsp </h1></mark></i>
+<body>
+
+	<div class="personA">
+		<div class="personA1">
+		Girl, to boyfriend taking pictures of her:</div>
+			
+		<div class="personA2">
+  		<b>"Oh my god these are horrible!"</b></div>
+		<br><div class="personB">
+		<div class="personB1">
+		Boyfriend:</div>
+
+			<div class="personB2">
+  			<b>“Well, what do you want me to do? That’s what you look like.”</b>
+  	</div>
+
+  	<p>
+<h4>Igloo Bar, 230 Fifth Rooftop <br>
+	Overheard by @tayrush24 <br>
+</p>
+
+  	<i><a href="type2.html">next</a> </i></h4>
 
 </body>
 </html>
