--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	Overheard by @tayrush24 <br>
 </p>
 
-  	<i><a href="type2.html">next</a> </i></h4>
+  	<a href="type2.html">next</a></h4>
 
 </body>
 </html>
