--- a/type1.html
+++ b/type1.html
@@ -14,34 +14,31 @@
 
 
 	<title>Rosa's hypertext story</title>
+
+
 </head>
-<body id="phone">
-
-
-
-<div id="rotate" class="personC1">
+<body>
+<!-- <body id="phone"> -->
+	
+<div id="phone">
+	<div id="rotate" class="personC1">
 	Boy: </div>
 
 	<div class="personC2">
-  				<b>"You still have a landline?"</b>
-</div>
-<br>
-</div>
-<div id="rotatepink" class="personD1">Girl:
-</div>
-<!-- <div id="rotatesq" --> <div class="personD2">"Yah, I use it to find my cellphone at home."</div>
-<!-- 
-<div id="rotateskinny"></div>
-<div id="rotatepink"></div> -->
+  				<b>"You still have a landline?"</b></div>
 
 </div>
+<p>
+	<div id="rotatepink" class="personD1">Girl:
+		</div>
+	<div class="personD2">"Yah, I use it to find my cellphone at home."</div>
+	</div></p>
+
 	<p><h4>
 	@overheardnewyork <br> 
 	Chop-Shop, Chelsea <br>
 	<!-- Overheard by @taylor_kelly <br> -->
   	<a href="type3.html">next</a> </h4>
-
-
 
 
 
