--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
   	</div>
 
   	<p>
-<h4>Igloo Bar, 230 Fifth Rooftop <br>
+<h4>@overheardnewyork <br> 
+	Igloo Bar, 230 Fifth Rooftop <br>
 	Overheard by @tayrush24 <br>
 </p>
 
