--- a/type1.html
+++ b/type1.html
@@ -8,29 +8,15 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- 
-
-	<script defer src="./script.js"></script> -->
-
-
 	<title>Rosa's hypertext story</title>
 
 
 </head>
 <body>
-<!-- <body id="phone"> -->
-	
-<div id="phone">
-	<div id="rotate" class="personC1">
-	Boy: </div>
-	<div class="personC2">
-  				<b>"You still have a landline?"</b></div>
+<b>Boy: "You still have a landline?"</b></div> <br><br>
 
-</div>
-<p>
-	<div id="rotatepink" class="personD1">Girl:
-		</div>
-	<div class="personD2">"Yah, I use it to find my cellphone at home."</div>
+<div class="person6">
+Girl: "Yah, I use it to find my cellphone at home."</div>
 	</div></p>
 
 	<p><h4>
