--- a/type5.html
+++ b/type5.html
@@ -33,7 +33,7 @@
 	Astoria-Ditmars Boulevard <br>
 	Overheard by @cxochitl <br>
 
-  	<a href="index.html">next</a> </h4>
+  	<a href="type6.html">next</a> </h4>
 
 </body>
 </html>
